components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__summary_markdown.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
assertion_line: 1000
expression: "read(&plan.out_dir_path().join(super::SCM_SUMMARY_MD))"
---
# SCM summary

- model: `1001.mod`
- out dir: `scm/1001`
- status: completed
- direction: forward -> backward
- alphas: forward 0.05, backward 0.001
- retries: up to 3 per fit, starting from the previous attempt's estimates
- covariance step: off
- retained: WT_CL
- final model: `final/1001_scm_final.mod` (OFV 979.500)

## reference

| candidate | model | attempts | status | OFV | ΔOFV | crit ΔOFV | df | p | significant | selected | estimate (RSE%) | cond# | heuristic checks |
|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
| base | `base/1001_base.mod` | 1 | succeeded | 1000.000 |  |  | 0 |  |  |  |  |  |  |

**Decision:** base model fitted (OFV 1000.000)

## forward_round1

Reference: `base/1001_base.mod` (OFV 1000.000) · alpha 0.05

| candidate | model | attempts | status | OFV | ΔOFV | crit ΔOFV | df | p | significant | selected | estimate (RSE%) | cond# | heuristic checks |
|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
| WT_CL | `forward_round1/1001_wt_cl.mod` | 1 | succeeded | 980.000 | -20.000 | 3.841 | 1 | 7.7442e-6 | yes | **yes** | 0.250 (N/A) |  |  |
| CRCL_CL | `forward_round1/1001_crcl_cl.mod` | 1 | succeeded | 996.000 | -4.000 | 3.841 | 1 | 4.5500e-2 | yes |  | 0.150 (N/A) |  |  |
| WT_V | `forward_round1/1001_wt_v.mod` | 1 | succeeded | 999.000 | -1.000 | 3.841 | 1 | 3.1731e-1 | no |  | 0.050 (N/A) |  |  |

**Decision:** added WT_CL (p = 7.744e-6, dOFV = -20.000)

## forward_round2

Reference: `forward_round1/1001_wt_cl.mod` (OFV 980.000) · alpha 0.05

| candidate | model | attempts | status | OFV | ΔOFV | crit ΔOFV | df | p | significant | selected | estimate (RSE%) | cond# | heuristic checks |
|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
| CRCL_CL | `forward_round2/1001_crcl_cl.mod` | 1 | succeeded | 974.000 | -6.000 | 3.841 | 1 | 1.4306e-2 | yes | **yes** | 0.150 (N/A) |  |  |
| WT_V | `forward_round2/1001_wt_v_try2.mod` | 2 | succeeded | 978.500 | -1.500 | 3.841 | 1 | 2.2067e-1 | no |  | 0.050 (N/A) |  |  |

**Decision:** added CRCL_CL (p = 1.431e-2, dOFV = -6.000)

## forward_round3

Reference: `forward_round2/1001_crcl_cl.mod` (OFV 974.000) · alpha 0.05

| candidate | model | attempts | status | OFV | ΔOFV | crit ΔOFV | df | p | significant | selected | estimate (RSE%) | cond# | heuristic checks |
|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
| WT_V | `forward_round3/1001_wt_v.mod` | 1 | succeeded | 973.000 | -1.000 | 3.841 | 1 | 3.1731e-1 | no |  | 0.050 (N/A) |  |  |

**Decision:** no candidate significant at alpha 0.05; forward selection stopped

## backward_round1

Reference: `forward_round2/1001_crcl_cl.mod` (OFV 974.000) · alpha 0.001

| candidate | model | attempts | status | OFV | ΔOFV | crit ΔOFV | df | p | significant | selected | estimate (RSE%) | cond# | heuristic checks |
|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
| WT_CL | `backward_round1/1001_wt_cl.mod` | 1 | succeeded | 995.000 | +21.000 | 10.828 | 1 | 4.5928e-6 | yes |  | 0.250 (N/A) |  |  |
| CRCL_CL | `backward_round1/1001_crcl_cl.mod` | 1 | succeeded | 980.000 | +6.000 | 10.828 | 1 | 1.4306e-2 | no | **yes** | 0.150 (N/A) |  |  |

**Decision:** dropped CRCL_CL (p = 1.431e-2, dOFV = +6.000)

## backward_round2

Reference: `backward_round1/1001_crcl_cl.mod` (OFV 980.000) · alpha 0.001

| candidate | model | attempts | status | OFV | ΔOFV | crit ΔOFV | df | p | significant | selected | estimate (RSE%) | cond# | heuristic checks |
|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
| WT_CL | `backward_round2/1001_wt_cl.mod` | 1 | succeeded | 1000.000 | +20.000 | 10.828 | 1 | 7.7442e-6 | yes |  | 0.250 (N/A) |  |  |

**Decision:** every covariate significant at alpha 0.001; backward elimination stopped
