components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__summary_matrix_p.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: "render(SummaryOptions { matrix: Some(MatrixValue::P), ..Default::default() })"
---
<scm summary> [TMP]/scm/1001   completed · forward -> backward · 5 rounds complete
model      : [TMP]/1001.mod   alphas: forward 0.05, backward 0.001   cov step: off
retained   : WT_CL
final model: final/1001_scm_final.mod (OFV 979.500)

p-value             fwd1      fwd2      fwd3      bwd1      bwd2
WT_CL           [7.7e-6]         ·         ·    4.6e-6    7.7e-6
CRCL_CL            0.046   [0.014]         ·   [0.014]         ·
WT_V               0.317     0.221     0.317         ·         ·
retained          +WT_CL  +CRCL_CL    (none)  -CRCL_CL    (none)
[ ] winner · dashes: not tested in that round · retained row: what each round changed
records    : scm_summary.json · scm_decision_log.{csv,md} · round_summary.{json,md} in each round dir
