components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__summary_round_complete.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
assertion_line: 952
expression: complete
---
<scm summary> scm/1001   running (updated [TIMESTAMP]) · forward -> backward · 1 round complete
model      : 1001.mod   alphas: forward 0.05, backward 0.001   cov step: off
candidates : WT_CL, CRCL_CL, WT_V
phase      : forward
retained   : WT_CL

forward_round1   ref OFV 1000.000 · alpha 0.05 · crit dOFV 3.841 · added WT_CL (p = 7.744e-6, dOFV = -20.000) [4 retries]
                 reference base/1001_base.mod · retained before this round: none
                 added after this round: WT_CL
  candidate             OFV       dOFV         p     flags
  WT_CL             980.000    -20.000    7.7e-6 *   <- selected
      forward_round1/1001_wt_cl.mod                no ofv
      forward_round1/1001_wt_cl_try2.mod           succeeded
      heuristics: parameter near boundary
  CRCL_CL           996.000     -4.000     0.045
      forward_round1/1001_crcl_cl.mod              succeeded
  WT_V                    -          -         -     unusable
      forward_round1/1001_wt_v.mod                 program aborted
      forward_round1/1001_wt_v_try2.mod            program aborted
      forward_round1/1001_wt_v_try3.mod            program aborted
      forward_round1/1001_wt_v_try4.mod            program aborted
      heuristics: program aborted

records    : scm_summary.{json,md} · round_summary.{json,md} in each round dir
