components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__summary_round_complete_long_files_timing.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: complete_long
---
<scm summary> scm/1001
model      : 1001.mod
status     : running (updated [AGE] ago) · 1 round complete
direction  : forward -> backward
alphas     : forward 0.05, backward 0.001
cov step   : off
candidates : WT_CL, CRCL_CL, WT_V
phase      : forward
path       : +WT_CL (forward 1) => WT_CL
time       : 8 fits (4 retries) · wall -

forward_round1   added WT_CL (p = 7.744e-6, dOFV = -20.000) [4 retries]
                 ref OFV 1000.000 · alpha 0.05 · crit dOFV 3.841
                 reference base/1001_base.mod
                 retained before this round: none
                 retained after this round: WT_CL
                 7 fits · wall -
  candidate             OFV       dOFV         p
  WT_CL             980.000    -20.000    7.7e-6 *    est -        <- added  [2 attempts]
      df 1 · tries 2 · heuristics parameter near boundary
      forward_round1/1001_wt_cl.mod                   est -        no ofv
      forward_round1/1001_wt_cl_try2.mod              est -        succeeded
  CRCL_CL           996.000     -4.000     0.045      est -
      df 1 · tries 1
      forward_round1/1001_crcl_cl.mod                 est -        succeeded
      run dir  forward_round1/1001_crcl_cl
  WT_V                    -          -         -      est -        unusable (program aborted)  [4 attempts]
      df 1 · tries 4 · heuristics program aborted
      forward_round1/1001_wt_v.mod                    est -        program aborted
      forward_round1/1001_wt_v_try2.mod               est -        program aborted
      forward_round1/1001_wt_v_try3.mod               est -        program aborted
      forward_round1/1001_wt_v_try4.mod               est -        program aborted

records    : scm_summary.{json,md} · round_summary.{json,md} in each round dir
