components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__summary_round_in_progress.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: in_progress
---
<scm summary> scm/1001
model      : 1001.mod
status     : running (updated [AGE] ago) · no rounds complete
direction  : forward -> backward
alphas     : forward 0.05, backward 0.001
cov step   : off
candidates : WT_CL, CRCL_CL, WT_V
phase      : forward
running    : forward_round1/1001_crcl_cl.mod
path       : none

forward_round1   in progress — 1/3 concluded [1 retry]
                 ref OFV 1000.000 · alpha 0.05 · crit dOFV 3.841
                 reference base/1001_base.mod
                 retained before this round: none
  candidate             OFV       dOFV         p
  WT_CL             980.000    -20.000    7.7e-6 *   [2 attempts]
      forward_round1/1001_wt_cl.mod                no ofv
      forward_round1/1001_wt_cl_try2.mod           succeeded
      heuristics: parameter near boundary
  CRCL_CL                 -          -         -
      forward_round1/1001_crcl_cl.mod              running
  WT_V                    -          -         -     pending

records    : scm_summary.{json,md} · round_summary.{json,md} in each round dir
