components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__summary_time.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: "render(SummaryOptions { time: true, ..Default::default() })"
---
<scm summary> [TMP]/scm/1001   completed · forward -> backward · 5 rounds complete
model      : [TMP]/1001.mod   alphas: forward 0.05, backward 0.001   cov step: off
retained   : WT_CL
final model: final/1001_scm_final.mod (OFV 980.000)
time       : 11 fits (1 retry) · wall - (- → -) · est time 11.0s

reference  base/1001_base.mod                           succeeded  OFV 1000.000   - → -  -

forward_round1   ref OFV 1000.000 · alpha 0.05 · crit dOFV 3.841 · added WT_CL (p = 7.744e-6, dOFV = -20.000)
                 3 fits · wall - (- → -) · est time 3.0s
  WT_CL        dOFV    -20.000   p 7.7e-6    *  <- selected   - → -  -
  CRCL_CL      dOFV     -4.000   p 0.046     *   - → -  -
  WT_V         dOFV     -1.000   p 0.317         - → -  -

forward_round2   ref OFV 980.000 · alpha 0.05 · crit dOFV 3.841 · added CRCL_CL (p = 1.431e-2, dOFV = -6.000)
                 3 fits · wall - (- → -) · est time 3.0s
  CRCL_CL      dOFV     -6.000   p 0.014     *  <- selected   - → -  -
  WT_V         dOFV     -1.500   p 0.221         - → -  -

forward_round3   ref OFV 974.000 · alpha 0.05 · crit dOFV 3.841 · no candidate significant at alpha 0.05; forward selection stopped
                 1 fit · wall - (- → -) · est time 1.0s
  WT_V         dOFV     -1.000   p 0.317         - → -  -

backward_round1  ref OFV 974.000 · alpha 0.001 · crit dOFV 10.828 · dropped CRCL_CL (p = 1.431e-2, dOFV = +6.000)
                 2 fits · wall - (- → -) · est time 2.0s
  CRCL_CL      dOFV     +6.000   p 0.014        <- dropped   - → -  -
  WT_CL        dOFV    +21.000   p 4.6e-6    *  kept   - → -  -

backward_round2  ref OFV 980.000 · alpha 0.001 · crit dOFV 10.828 · every covariate significant at alpha 0.001; backward elimination stopped
                 1 fit · wall - (- → -) · est time 1.0s
  WT_CL        dOFV    +20.000   p 7.7e-6    *  kept   - → -  -

records    : scm_summary.json · scm_decision_log.{csv,md} · round_summary.{json,md} in each round dir
