components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__transcript_candidate_removed_between_rounds.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: "format!(\"{}\\n# scm status\\n{status}\", transcript(&fewer, &executor, false),)"
---
# fits dispatched
base/1001_base
forward_round1/1001_wt_cl
forward_round1/1001_crcl_cl
forward_round1/1001_wt_v
forward_round2/1001_crcl_cl
forward_final/1001_scm_forward_final
backward_round1/1001_wt_cl
backward_round1/1001_crcl_cl
backward_round2/1001_wt_cl
final/1001_scm_final

# files in out_dir
.gitignore
backward_round1/1001_crcl_cl.mod
backward_round1/1001_crcl_cl/1001_crcl_cl.ext
backward_round1/1001_crcl_cl/1001_crcl_cl.lst
backward_round1/1001_crcl_cl/1001_crcl_cl.mod
backward_round1/1001_crcl_cl/pharos_end.json
backward_round1/1001_crcl_cl/pharos_start.json
backward_round1/1001_crcl_cl/pharos_summary.json
backward_round1/1001_wt_cl.mod
backward_round1/1001_wt_cl/1001_wt_cl.ext
backward_round1/1001_wt_cl/1001_wt_cl.lst
backward_round1/1001_wt_cl/1001_wt_cl.mod
backward_round1/1001_wt_cl/pharos_end.json
backward_round1/1001_wt_cl/pharos_start.json
backward_round1/1001_wt_cl/pharos_summary.json
backward_round1/round_summary.json
backward_round1/round_summary.md
backward_round2/1001_wt_cl.mod
backward_round2/1001_wt_cl/1001_wt_cl.ext
backward_round2/1001_wt_cl/1001_wt_cl.lst
backward_round2/1001_wt_cl/1001_wt_cl.mod
backward_round2/1001_wt_cl/pharos_end.json
backward_round2/1001_wt_cl/pharos_start.json
backward_round2/1001_wt_cl/pharos_summary.json
backward_round2/round_summary.json
backward_round2/round_summary.md
base/1001_base.mod
base/1001_base/1001_base.ext
base/1001_base/1001_base.lst
base/1001_base/1001_base.mod
base/1001_base/pharos_end.json
base/1001_base/pharos_start.json
base/1001_base/pharos_summary.json
base/round_summary.json
base/round_summary.md
final/1001_scm_final.mod
final/1001_scm_final/1001_scm_final.ext
final/1001_scm_final/1001_scm_final.lst
final/1001_scm_final/1001_scm_final.mod
final/1001_scm_final/pharos_end.json
final/1001_scm_final/pharos_start.json
final/1001_scm_final/pharos_summary.json
forward_final/1001_scm_forward_final.mod
forward_final/1001_scm_forward_final/1001_scm_forward_final.ext
forward_final/1001_scm_forward_final/1001_scm_forward_final.lst
forward_final/1001_scm_forward_final/1001_scm_forward_final.mod
forward_final/1001_scm_forward_final/pharos_end.json
forward_final/1001_scm_forward_final/pharos_start.json
forward_final/1001_scm_forward_final/pharos_summary.json
forward_round1/1001_crcl_cl.mod
forward_round1/1001_crcl_cl/1001_crcl_cl.ext
forward_round1/1001_crcl_cl/1001_crcl_cl.lst
forward_round1/1001_crcl_cl/1001_crcl_cl.mod
forward_round1/1001_crcl_cl/pharos_end.json
forward_round1/1001_crcl_cl/pharos_start.json
forward_round1/1001_crcl_cl/pharos_summary.json
forward_round1/1001_wt_cl.mod
forward_round1/1001_wt_cl/1001_wt_cl.ext
forward_round1/1001_wt_cl/1001_wt_cl.lst
forward_round1/1001_wt_cl/1001_wt_cl.mod
forward_round1/1001_wt_cl/pharos_end.json
forward_round1/1001_wt_cl/pharos_start.json
forward_round1/1001_wt_cl/pharos_summary.json
forward_round1/1001_wt_v.mod
forward_round1/1001_wt_v/1001_wt_v.ext
forward_round1/1001_wt_v/1001_wt_v.lst
forward_round1/1001_wt_v/1001_wt_v.mod
forward_round1/1001_wt_v/pharos_end.json
forward_round1/1001_wt_v/pharos_start.json
forward_round1/1001_wt_v/pharos_summary.json
forward_round1/round_summary.json
forward_round1/round_summary.md
forward_round2/1001_crcl_cl.mod
forward_round2/1001_crcl_cl/1001_crcl_cl.ext
forward_round2/1001_crcl_cl/1001_crcl_cl.lst
forward_round2/1001_crcl_cl/1001_crcl_cl.mod
forward_round2/1001_crcl_cl/pharos_end.json
forward_round2/1001_crcl_cl/pharos_start.json
forward_round2/1001_crcl_cl/pharos_summary.json
forward_round2/round_summary.json
forward_round2/round_summary.md
plan.json
scm_state.json
scm_summary.json
scm_summary.md

# scm_summary.md
# SCM summary

- out dir: scm/1001
- model: 1001.mod
- status: completed (updated [TIMESTAMP]) · 4 rounds complete
- direction: forward -> backward
- alphas: forward 0.05, backward 0.001
- cov step: off
- candidates: WT_CL, CRCL_CL
- path: +WT_CL (forward 1) -> +CRCL_CL (forward 2) -> -CRCL_CL (backward 1) => WT_CL
- removed: WT_V (after forward_round1)
- forward model: forward_final/1001_scm_forward_final.mod (OFV 973.800)
- final model: final/1001_scm_final.mod (OFV 979.500)

## reference

- model: `base/1001_base.mod` (succeeded)
- heuristic checks fired: none
- decision: base model fitted (OFV 1000.000)
- wall time: 1m 30s

## forward_round1

- reference: `base/1001_base.mod` (OFV 1000.000)
- alpha: 0.05
- all models minimized: yes
- heuristic checks fired: no
- decision: added WT_CL (p = 7.744e-6, dOFV = -20.000)
- retained before this round: none
- retained after this round: WT_CL
- wall time: 1m 30s

| candidate | model | status | OFV | ΔOFV | p | significant | selected | estimate (RSE%) |
|---|---|---|---|---|---|---|---|---|
| WT_CL | `forward_round1/1001_wt_cl.mod` | succeeded | 980.000 | -20.000 | 7.7442e-6 | yes | **yes** | 0.250 (N/A) |
| CRCL_CL | `forward_round1/1001_crcl_cl.mod` | succeeded | 996.000 | -4.000 | 4.5500e-2 | yes |  | 0.150 (N/A) |
| WT_V | `forward_round1/1001_wt_v.mod` | succeeded | 999.000 | -1.000 | 3.1731e-1 | no |  | 0.050 (N/A) |

## forward_round2

- reference: `forward_round1/1001_wt_cl.mod` (OFV 980.000)
- alpha: 0.05
- all models minimized: yes
- heuristic checks fired: no
- removed before this round: WT_V
- decision: added CRCL_CL (p = 1.431e-2, dOFV = -6.000)
- retained before this round: WT_CL
- retained after this round: WT_CL, CRCL_CL
- wall time: 1m 30s

| candidate | model | status | OFV | ΔOFV | p | significant | selected | estimate (RSE%) |
|---|---|---|---|---|---|---|---|---|
| CRCL_CL | `forward_round2/1001_crcl_cl.mod` | succeeded | 974.000 | -6.000 | 1.4306e-2 | yes | **yes** | 0.150 (N/A) |

## backward_round1

- reference: `forward_round2/1001_crcl_cl.mod` (OFV 974.000)
- alpha: 0.001
- all models minimized: yes
- heuristic checks fired: no
- removed before this round: WT_V
- decision: dropped CRCL_CL (p = 1.431e-2, dOFV = +6.000)
- retained before this round: WT_CL, CRCL_CL
- dropped after this round: CRCL_CL
- wall time: 1m 30s

| candidate | model | status | OFV | ΔOFV | p | significant | selected | estimate (RSE%) |
|---|---|---|---|---|---|---|---|---|
| WT_CL | `backward_round1/1001_wt_cl.mod` | succeeded | 995.000 | +21.000 | 4.5928e-6 | yes |  | 0.250 (N/A) |
| CRCL_CL | `backward_round1/1001_crcl_cl.mod` | succeeded | 980.000 | +6.000 | 1.4306e-2 | no | **yes** | 0.150 (N/A) |

## backward_round2

- reference: `backward_round1/1001_crcl_cl.mod` (OFV 980.000)
- alpha: 0.001
- all models minimized: yes
- heuristic checks fired: no
- removed before this round: WT_V
- decision: every covariate significant at alpha 0.001; backward elimination stopped
- retained before this round: WT_CL
- dropped after this round: none
- wall time: 1m 30s

| candidate | model | status | OFV | ΔOFV | p | significant | selected | estimate (RSE%) |
|---|---|---|---|---|---|---|---|---|
| WT_CL | `backward_round2/1001_wt_cl.mod` | succeeded | 1000.000 | +20.000 | 7.7442e-6 | yes |  | 0.250 (N/A) |


# scm status
<scm status> scm/1001
model      : 1001.mod
status     : completed (updated [AGE] ago) · 4 rounds complete
direction  : forward -> backward
alphas     : forward 0.05, backward 0.001
cov step   : off
candidates : WT_CL, CRCL_CL
removed    : WT_V (after forward_round1)
forward model: forward_final/1001_scm_forward_final.mod (OFV 973.800)
final model: final/1001_scm_final.mod (OFV 979.500)

reference complete: base model fitted (OFV 1000.000)

forward_round1 complete: added WT_CL (p = 7.744e-6, dOFV = -20.000); retained: WT_CL
  candidate             OFV       dOFV         p
  WT_CL             980.000    -20.000    7.7e-6 *   <- added
  CRCL_CL           996.000     -4.000     0.046 *
  WT_V              999.000     -1.000     0.317

forward_round2 complete: added CRCL_CL (p = 1.431e-2, dOFV = -6.000); retained: WT_CL, CRCL_CL
  candidate             OFV       dOFV         p
  CRCL_CL           974.000     -6.000     0.014 *   <- added

backward_round1 complete: dropped CRCL_CL (p = 1.431e-2, dOFV = +6.000); retained: WT_CL
  candidate             OFV       dOFV         p
  CRCL_CL           980.000     +6.000     0.014     <- dropped
  WT_CL             995.000    +21.000    4.6e-6 *   kept

backward_round2 complete: every covariate significant at alpha 0.001; backward elimination stopped; retained: WT_CL
  candidate             OFV       dOFV         p
  WT_CL            1000.000    +20.000    7.7e-6 *   kept
